--- a/index.html
+++ b/index.html
@@ -17,6 +17,34 @@
 
 
         <!--  v  add pictures and captions below  v  -->
+        <!-- begin tree picture and caption -->
+        <div class="center-container">
+          <div class="card">
+            <img src="public/img/trees.jpg" alt="birds flocking around two trees">
+          </div>
+          <div class="card">
+            <div class="caption">
+              <h4>A Treee Dreaming</h4>
+              <p>Christian Spencer</p>
+              <p>Strezlecki Desert, Australia</p>
+            </div>
+          </div>
+        </div>
+        <!-- end tree picture and caption -->
+        <!-- begin turtle picture and caption -->
+<div class="center-container">
+  <div class="card">
+    <div class="caption">
+      <h4>From the Sky</h4>
+      <p>Montse Grillo</p>
+      <p>Tenerife, Canary Islands</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="public/img/turtle.jpg" alt="sea turtle swimming">
+  </div>
+</div>
+<!-- end turtle picture and caption -->
         <div class="center-container">
           <div class="card">
             <div class="caption">
